about file edited

--- a/about.html
+++ b/about.html
@@ -1,15 +1,14 @@
 <html>
 <head>
-<title> :: Home ::</title>
+<title> :: about us ::</title>
 
 </head>
 <body>
 
-<h1> Hello Welcome to my web application 
+<h1> this is about ..........
 New DATA IS HERE...
 </h1>
- here is new content...!!
- hello indra	
+hello new data .. 
 
 </body>
 
